name:                model-org-component
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Naushadh
maintainer:          Naushadh@protonmail.com
copyright:           2018 Naushadh
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , persistent
    , persistent-template
    , text
    , time
    , template-haskell
  exposed-modules:
      Database.PersistExample.Schema
  other-modules:
      Database.PersistExample.MyRecord1.Schema
    , Database.PersistExample.MyRecord2.Schema
    , Database.PersistExample.MyRecord3.Schema
    , Database.PersistExample.MyRecord4.Schema
    , Database.PersistExample.MyRecord5.Schema
    , Database.PersistExample.MyRecord6.Schema
    , Database.PersistExample.MyRecord7.Schema
    , Database.PersistExample.MyRecord8.Schema
    , Database.PersistExample.MyRecord9.Schema
    , Database.PersistExample.MyRecord10.Schema
    , Database.PersistExample.MyRecord11.Schema
    , Database.PersistExample.MyRecord12.Schema
    , Database.PersistExample.MyRecord13.Schema
    , Database.PersistExample.MyRecord14.Schema
    , Database.PersistExample.MyRecord15.Schema
    , Database.PersistExample.MyRecord16.Schema
    , Database.PersistExample.MyRecord17.Schema
    , Database.PersistExample.MyRecord18.Schema
    , Database.PersistExample.MyRecord19.Schema
    , Database.PersistExample.MyRecord20.Schema
    , Database.PersistExample.MyRecord1And2.Schema
    , Database.PersistExample.Migration
    , Database.PersistExample.Util
  ghc-options:
    -j
    -O2